// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendWhatsAppMsgComp render should render list items when passed 1`] = `
<SendWhatsAppMsgComp
  attachment={null}
  button_text=""
  footer=""
  header_text=""
  header_type="media"
  interaction_type="list"
  list_items={
    Array [
      Object {
        "description": "Description 1",
        "title": "Title 1",
      },
    ]
  }
  quick_replies={Array []}
  text=""
  type="send_msg"
  uuid="b1f332f3-bdd3-4891-aec5-1843a712dbf1"
>
  <div />
  <div
    className=""
  />
  <div
    className="summary"
  >
    <div
      className="list_items"
    >
      <Pill
        advanced={true}
        disabled={true}
        key="b1f332f3-bdd3-4891-aec5-1843a712dbf1Title 1"
        maxLength={20}
        text="Title 1"
      >
        <ForwardRef
          clickable={false}
          data-advanced={true}
          disabled={true}
          text="Title 1"
        >
          <ForwardRef
            clickable={false}
            component={
              Object {
                "_Ctor": Object {
                  "0": [Function],
                },
                "_compiled": true,
                "computed": Object {
                  "currentComponent": [Function],
                },
                "name": "unnnic-tag",
                "props": Object {
                  "clickable": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "count": Object {
                    "default": 0,
                    "type": [Function],
                  },
                  "disabled": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "enableTooltip": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "hasBackButton": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "hasCloseIcon": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "icon": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "scheme": Object {
                    "default": "aux-purple",
                    "type": [Function],
                  },
                  "text": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "tooltipText": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "default": "default",
                    "type": [Function],
                    "validator": [Function],
                  },
                },
                "render": [Function],
                "staticRenderFns": Array [],
              }
            }
            data-advanced={true}
            disabled={true}
            text="Title 1"
            vuereact-combined-options={
              Object {
                "react": Object {},
                "vue": Object {},
              }
            }
          >
            <r
              clickable={false}
              component={
                Object {
                  "_Ctor": Object {
                    "0": [Function],
                  },
                  "_compiled": true,
                  "computed": Object {
                    "currentComponent": [Function],
                  },
                  "name": "unnnic-tag",
                  "props": Object {
                    "clickable": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "count": Object {
                      "default": 0,
                      "type": [Function],
                    },
                    "disabled": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "enableTooltip": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "hasBackButton": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "hasCloseIcon": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "icon": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "scheme": Object {
                      "default": "aux-purple",
                      "type": [Function],
                    },
                    "text": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "tooltipText": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "type": Object {
                      "default": "default",
                      "type": [Function],
                      "validator": [Function],
                    },
                  },
                  "render": [Function],
                  "staticRenderFns": Array [],
                }
              }
              data-advanced={true}
              disabled={true}
              text="Title 1"
              vuereact-combined-options={
                Object {
                  "react": Object {
                    "componentWrap": "div",
                    "componentWrapAttrs": Object {
                      "__use_react_component_wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                    "slotWrap": "div",
                    "slotWrapAttrs": Object {
                      "__use_react_slot_wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                  },
                  "vue": Object {
                    "componentWrapAttrs": Object {
                      "data-use-vue-component-wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                    "componentWrapHOC": [Function],
                    "slotWrapAttrs": Object {
                      "data-use-vue-slot-wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                  },
                }
              }
            >
              <Component
                portals={Array []}
              >
                <div
                  data-use-vue-component-wrap=""
                  style={
                    Object {
                      "all": "unset",
                    }
                  }
                >
                  <div
                    key="null"
                  />
                </div>
              </Component>
            </r>
          </ForwardRef>
        </ForwardRef>
      </Pill>
    </div>
  </div>
</SendWhatsAppMsgComp>
`;

exports[`SendWhatsAppMsgComp render should render quick replies list when passed 1`] = `
<SendWhatsAppMsgComp
  attachment={null}
  button_text=""
  footer=""
  header_text=""
  header_type="media"
  interaction_type="list"
  list_items={Array []}
  quick_replies={
    Array [
      "Quick Reply 1",
    ]
  }
  text=""
  type="send_msg"
  uuid="b1f332f3-bdd3-4891-aec5-1843a712dbf1"
>
  <div />
  <div
    className="summary"
  >
    <div
      className="quick_replies"
    >
      <Pill
        advanced={true}
        disabled={true}
        key="b1f332f3-bdd3-4891-aec5-1843a712dbf1Quick Reply 1"
        maxLength={20}
        text="Quick Reply 1"
      >
        <ForwardRef
          clickable={false}
          data-advanced={true}
          disabled={true}
          text="Quick Reply 1"
        >
          <ForwardRef
            clickable={false}
            component={
              Object {
                "_Ctor": Object {
                  "0": [Function],
                },
                "_compiled": true,
                "computed": Object {
                  "currentComponent": [Function],
                },
                "name": "unnnic-tag",
                "props": Object {
                  "clickable": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "count": Object {
                    "default": 0,
                    "type": [Function],
                  },
                  "disabled": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "enableTooltip": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "hasBackButton": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "hasCloseIcon": Object {
                    "default": false,
                    "type": [Function],
                  },
                  "icon": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "scheme": Object {
                    "default": "aux-purple",
                    "type": [Function],
                  },
                  "text": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "tooltipText": Object {
                    "default": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "default": "default",
                    "type": [Function],
                    "validator": [Function],
                  },
                },
                "render": [Function],
                "staticRenderFns": Array [],
              }
            }
            data-advanced={true}
            disabled={true}
            text="Quick Reply 1"
            vuereact-combined-options={
              Object {
                "react": Object {},
                "vue": Object {},
              }
            }
          >
            <r
              clickable={false}
              component={
                Object {
                  "_Ctor": Object {
                    "0": [Function],
                  },
                  "_compiled": true,
                  "computed": Object {
                    "currentComponent": [Function],
                  },
                  "name": "unnnic-tag",
                  "props": Object {
                    "clickable": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "count": Object {
                      "default": 0,
                      "type": [Function],
                    },
                    "disabled": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "enableTooltip": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "hasBackButton": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "hasCloseIcon": Object {
                      "default": false,
                      "type": [Function],
                    },
                    "icon": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "scheme": Object {
                      "default": "aux-purple",
                      "type": [Function],
                    },
                    "text": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "tooltipText": Object {
                      "default": null,
                      "type": [Function],
                    },
                    "type": Object {
                      "default": "default",
                      "type": [Function],
                      "validator": [Function],
                    },
                  },
                  "render": [Function],
                  "staticRenderFns": Array [],
                }
              }
              data-advanced={true}
              disabled={true}
              text="Quick Reply 1"
              vuereact-combined-options={
                Object {
                  "react": Object {
                    "componentWrap": "div",
                    "componentWrapAttrs": Object {
                      "__use_react_component_wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                    "slotWrap": "div",
                    "slotWrapAttrs": Object {
                      "__use_react_slot_wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                  },
                  "vue": Object {
                    "componentWrapAttrs": Object {
                      "data-use-vue-component-wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                    "componentWrapHOC": [Function],
                    "slotWrapAttrs": Object {
                      "data-use-vue-slot-wrap": "",
                      "style": Object {
                        "all": "unset",
                      },
                    },
                  },
                }
              }
            >
              <Component
                portals={Array []}
              >
                <div
                  data-use-vue-component-wrap=""
                  style={
                    Object {
                      "all": "unset",
                    }
                  }
                >
                  <div
                    key="null"
                  />
                </div>
              </Component>
            </r>
          </ForwardRef>
        </ForwardRef>
      </Pill>
    </div>
  </div>
  <div
    className=""
  />
</SendWhatsAppMsgComp>
`;

exports[`SendWhatsAppMsgComp render should render text prop when passed 1`] = `
<SendWhatsAppMsgComp
  attachment={null}
  button_text=""
  footer=""
  header_text=""
  header_type="media"
  interaction_type="list"
  list_items={Array []}
  quick_replies={Array []}
  text="Text"
  type="send_msg"
  uuid="b1f332f3-bdd3-4891-aec5-1843a712dbf1"
>
  <div>
    <div
      className="line"
      key="b1f332f3-bdd3-4891-aec5-1843a712dbf10"
    >
      Text
    </div>
  </div>
  <div
    className=""
  />
  <div
    className=""
  />
</SendWhatsAppMsgComp>
`;
